<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RegisterStepOneFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/fragment_register_main_text"
        android:textColor="@color/appOrange"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView"
        android:padding="5dp"
        android:textColor="@color/appOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="-10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/head_register_name_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameField"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#59000000"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/example_name"
        android:textColor="#59000000"
        android:textColorHint="#40000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="-10dp"
        android:text="@string/head_register_surname_text"
        android:textColor="@color/appOrange"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/surnameField"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/surnameField"
        android:textColor="#59000000"
        android:textColorHint="#40000000"
        android:backgroundTint="#59000000"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/example_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="-10dp"
        android:text="@string/head_register_nick_text"
        android:textColor="@color/appOrange"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pseudonimField"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/pseudonimField"
        android:textColor="#59000000"
        android:textColorHint="#40000000"
        android:backgroundTint="#59000000"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/example_nick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameField"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pseudonimField">

        <Button
            android:id="@+id/nextButton"
            android:background="@drawable/empty_custom_button"
            android:textColor="@color/appOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/next_step_text" />
        <Button
            android:id="@+id/backButton"
            android:background="@drawable/fill_custom_button"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/back_step_text" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>