<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/fragment_login_main_text"
        android:textColor="@color/appOrange"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView"
        android:padding="5dp"
        android:textColor="@color/appOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="-10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/head_login_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginField"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#59000000"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/example_login"
        android:textColor="#59000000"
        android:textColorHint="#40000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:textColor="@color/appOrange"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="-10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/head_password_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordFields"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/passwordFields"
        android:textColor="#59000000"
        android:textColorHint="#40000000"
        android:backgroundTint="#59000000"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/example_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginField"/>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:columnCount="2"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordFields">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/fill_custom_button"
            android:text="@string/button_register_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/empty_custom_button"
            android:text="@string/button_login_text"
            android:textColor="@color/appOrange" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>